--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 11)            # Enable c++11 standard
 set(SOURCE_FILES main.cpp container.hpp)
 
 # Add executable target with source files listed in SOURCE_FILES variable
-add_executable(simple_example ${SOURCE_FILES})
+add_executable(DBDS ${SOURCE_FILES})
