--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(DBDS)
 set(CMAKE_CXX_STANDARD 11)            # Enable c++11 standard
 
 # Add main.cpp file of project root directory as source file
-set(SOURCE_FILES main.cpp container.hpp)
+set(SOURCE_FILES src/main.cpp src/container.hpp)
 
 # Add executable target with source files listed in SOURCE_FILES variable
 add_executable(DBDS ${SOURCE_FILES})
